# vibly

./: .gitattributes  .gitignore  LICENSE  README.md  computeQ2Dtest.py  pyproject.toml  requirements.txt  run_learning_examples.py  setup.py  slip.py  slippy.yml  test.py  utilities.py  viability.py  vibly.yml
.github/workflows/: unit-tests.yml
control/: __init__.py  control.py
data/: low_res_slip.npz
data/dynamics/: hi_res_slip_map.pickle  hover_map.pickle  nslip_map.pickle  slip_map.pickle  slip_map_proxy.pickle  spaceship4_map.pickle
data/gp_model/: hover_prior.npy  slip_prior_proxy.npy  slip_prior_true.npy  spaceship4.npy  spaceship4_1000.npy  spaceship4_lowres.npy
data/guineafowl/: guineafowl_0.0010.pickle  guineafowl_0.0010_trajs.pickle  guineafowl_0.0050.pickle  guineafowl_0.0050_trajs.pickle  guineafowl_0.0100.pickle  guineafowl_0.0100_trajs.pickle  guineafowl_0.0200.pickle  guineafowl_0.0200_trajs.pickle  guineafowl_0.0300.pickle  guineafowl_0.0300_trajs.pickle  guineafowl_0.0400.pickle  guineafowl_0.0400_trajs.pickle  guineafowl_0.0500.pickle  guineafowl_0.0500_trajs.pickle  guineafowl_0.0600.pickle  guineafowl_0.0600_trajs.pickle  guineafowl_0.0700.pickle  guineafowl_0.0700_trajs.pickle  guineafowl_0.0800.pickle  guineafowl_0.0800_trajs.pickle  guineafowl_0.0900.pickle  guineafowl_0.0900_trajs.pickle  guineafowl_0.1000.pickle  guineafowl_0.1000_trajs.pickle  guineafowl_0.1100.pickle  guineafowl_0.1100_trajs.pickle  guineafowl_0.1200.pickle  (+16 more)
demos/: computeQ.py  computeQ2Dtest.py  computeQ_daslip.py  computeQ_hovership.py  computeQ_lip.py  computeQ_nslip.py  computeQ_satellite.py  computeQ_slip.py  computeQ_spaceship4.py  daslip_demo.py  daslip_guineafowl.py  jit_test.py  nslip_demo.py  poincare_map_demo.py  slip_demo.py  test.py  test_daslip.py  viability_plot.py  visualise_viability.py
measure/: active_sampling.py  estimate_measure.py
models/: acrobot.py  ardyn.py  daslip.py  hovership.py  lip.py  nslip.py  parslip.py  pendulum.py  satellite.py  slip.py  spaceship.py  spaceship4.py
plotting/: animation.py  corl_plotters.py  guinea_plotters.py  single_trials.py  value_plotters.py  visualise_viability.py
scratchpad/: active_sampling.py  ardyn_computeQ.py  computeQ_daslip.py  compute_measure.py  daslip_triple_step.py  estimate_measure.py  grid_to_list_and_back.py  hovership_experiment.py  hovership_unviable_start.py  initialize_active_sampling.py  save_gp.py  scratch_computeQ.py  scratch_hovership.py  scratch_process_viability.py  scratch_spaceship.py  scratch_spaceship4.py  slip_experiment.py  slip_map.npz
slippy/: ardyn.py  daslip.py  estimate_measure.py  hovership.py  nslip.py  slip.py  spaceship.py  spaceship4.py  viability.py
tests/: README.md
viability/: __init__.py  viability.py  viability2D.py
(+157 files in other folders)
