[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibly"
version = "0.2"
description = "vibly"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Steve Heim", email = "heim.steve@gmail.com" }
]
license = { text = "MIT" }
keywords = ["vibly"]  # optional
dependencies = [
  "joblib>=1.4.2",
  "matplotlib>=3.0.3,<=3.5.1",
  "numpy>=1.18.4,<=1.22.3",
  "ruff>=0.9.7",
  "scipy>=1.5.1,<=1.8.0",
  "ttictoc>=0.5.6"
]

[tool.setuptools]
packages = [
  "models",
  "measure",
  "viability",
  "control",
  "plotting"
]
