[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibly"
version = "0.2"
description = "vibly"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Steve Heim", email = "heim.steve@gmail.com" }
]
license = { text = "MIT" }
keywords = ["vibly"]  # optional
dependencies = [
  "joblib>=1.4.2",
  "matplotlib>=3.0.3",
  "numpy>=1.18.4",
  "ruff>=0.9.7",
  "scipy>=1.5.1",
  "ttictoc>=0.5.6"
]

[tool.setuptools]
packages = [
  "models",
  "measure",
  "viability",
  "control",
  "plotting"
]

# ruff

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "__init__.py",
    "logs/",
]
lint.select = [
    "E",
    "F",
    "W",
]
lint.ignore-init-module-imports = true
# Same as Black.
line-length = 88
indent-width = 4
[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
